<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/adrien_olichon_unsplash">

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/string_login"
                android:textColor="@color/txtLoginColor"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/roll_the_dice"
            android:fontFamily="cursive"
            android:textColor="#FFFF"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/roll_d4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roll_D4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/roll_d6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roll_D6"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/roll_d8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roll_D8"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/roll_d10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roll_D10"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/roll_d12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roll_D12"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/roll_d20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roll_D20"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>