<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/btnCancel"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/fireBrick"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textColor="@color/midnightBlue"
            android:textSize="50sp"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:autofillHints="false"
                android:inputType="textEmailAddress"
                android:hint="@string/user_name"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:autofillHints="false"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/create_account"
                    android:textColor="@color/blue"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/forget_password"
                    android:textStyle="italic"
                    android:textColor="@color/blue"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="185dp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp">

            <Button
                android:id="@+id/btnConfirmLogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnLogin"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:background="@drawable/rounded_button_coloraccent"
                android:textAllCaps="false" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>